add info under construction

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -3,7 +3,7 @@
     "title": "HOME"
   },
   "index": {
-    "title": "Dein antiker Auto-Alchemist :)",
+    "title": "In unserer Website wird noch gewerkelt, aber wir versprechen, es wird die Wartezeit wert sein! 🚧💻",
     "subTitle": "Willkommen bei 01 Car Hub, wo du Checklisten findest, die dich mit Wissen versorgen und dir helfen, informierte Entscheidungen über deinen nächsten Autokauf zu treffen.",
     "btn": {
       "basic": "Basis-Checkliste",
