--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,7 +3,7 @@
     "title": "HOME"
   },
   "index": {
-    "title": "Your Ancient Auto Alchemist :)",
+    "title": "Our website is under construction, but we promise it's going to be worth the wait! 🚧💻",
     "subTitle": "Welcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.",
     "btn": {
       "basic": "Basic Checklist",
