add more resources, add translations to test drie

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -24,7 +24,27 @@
     "service-records": "4. Gibt es Serviceaufzeichnungen? Was wurde während Ihres Besitzes am Auto gemacht?",
     "car-usage": "5. Wofür haben Sie das Auto genutzt?",
     "miles-driven": "6. Wie viele Meilen sind Sie damit gefahren, während Sie es besessen haben?",
-    "next-car": "7. Welches Auto möchten Sie als Nächstes? Warum?"
+    "next-car": "7. Welches Auto möchten Sie als Nächstes? Warum?",
+    "bring": "Mitbringen",
+    "obdii-scanner": "OBDII-Scanner",
+    "magnet": "Magnet",
+    "flashlight": "Taschenlampe",
+    "paper-towel": "Papierhandtuch",
+    "pen": "Stift",
+    "value-from-research": "Aus Ihrer Recherche",
+    "value-trade-in": "Wert des Autos:",
+    "h2engine": "Motor (kalt starten, warmlaufen lassen, Probefahrt machen)",
+    "before-startup": "Vor dem Start",
+    "hood-pops-open": "Lässt sich die Motorhaube leicht öffnen?",
+    "hood-support-struts": "Arbeiten die Motorhaubenstützen?",
+    "frame-condition": "Karosserie (gerade, ohne Knicke)?",
+    "engine-cleanliness": "Sauber vs. schmutzig (Wurde der Motor gereinigt)?",
+    "inspect-leaks": "Auf Lecks prüfen (Öl, Kühlmittel, Getriebe)?",
+    "damage-new-parts": "Schäden/Neue Teile?",
+    "oil-level-oil": "Ölstand und Öl (kein Metall, nicht schaumig)?",
+    "oil-cap-froth": "Öldeckel (kein Schaum unter dem Deckel)?",
+    "check-coolant": "Kühlmittel prüfen (stellen Sie sicher, dass es nicht heiß ist, wenn Sie prüfen)?",
+    "inspect-components": "Inspektion von Schläuchen, Riemen, Batterieanschlüssen, Drähten, usw.?"
   },
   "basic": {
     "year": "Jahr",
