--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -24,7 +24,27 @@
     "service-records": "4. Any service records, what have you done since owning the car?",
     "car-usage": "5. What did you use the car for?",
     "miles-driven": "6. How many miles did you put on it when you owned it?",
-    "next-car": "7. What car are you looking to get now? Why?"
+    "next-car": "7. What car are you looking to get now? Why?",
+    "bring": "Things to Bring",
+    "obdii-scanner": "OBDII Scanner",
+    "magnet": "Magnet",
+    "flashlight": "Flashlight",
+    "paper-towel": "Paper Towel",
+    "pen": "Pen",
+    "value-from-research": "From your Research",
+    "value-trade-in": "Value of the Car (trade-in value):",
+    "h2engine": "Engine (start cold, let warm up, go for a ride)",
+    "before-startup": "Before Startup",
+    "hood-pops-open": "Hood Pops Open Easily?",
+    "hood-support-struts": "Hood Support/Struts Work?",
+    "frame-condition": "Frame (Straight, No Kinks)?",
+    "engine-cleanliness": "Clean vs Dirty (Was the engine detailed)?",
+    "inspect-leaks": "Inspect for Leaks? (oil, coolant, tranny)",
+    "damage-new-parts": "Any Damage/New Parts?",
+    "oil-level-oil": "Oil Level and Oil (no metal, not frothy)?",
+    "oil-cap-froth": "Oil Cap (no froth under cap)?",
+    "check-coolant": "Check Coolant (make sure it's not hot when you check)?",
+    "inspect-components": "Inspect Hoses, Belts, Battery Posts, Wires, etc.?"
   },
   "basic": {
     "year": "Year",
