add translation test drive

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -58,7 +58,38 @@
     "oil-cap-pulses-smoke-froth-warm": "Untersuchen Sie unter dem Öldeckel (Starke Impulse/Rauch/Schaum)?",
     "idle-smooth-out-warm": "Leerlauf (fällt der Leerlauf ab und glättet sich aus)?",
     "radiator-reservoir-bubbling": "Blubbern im Kühlmittelbehälter? (Geplatzte Zylinderkopfdichtung)",
-    "exhaust-smoke-warm": "Überprüfen Sie den Auspuff auf Rauch beim Starten?"
+    "exhaust-smoke-warm": "Überprüfen Sie den Auspuff auf Rauch beim Starten?",
+    "h2-interior": "Innenraum",
+    "h3-searts": "Sitze",
+    "interior-seats": "Sitze: Vorne und Hinten",
+    "interior-damage-stains": "Schäden, Risse, Tränen, Flecken, Geruch",
+    "interior-solid-no-movement": "Stabil/Keine Bewegung",
+    "interior-adjust-properly": "Richtig einstellen (Vor, Zurück, Neigung)",
+    "h3-carpet": "Teppich",
+    "interior-carpet": "Teppich: Vorne, Hinten und Kofferraum",
+    "interior-check-under-carpets": "Unter den Teppichen überprüfen (Rost, Wasser)",
+    "nterior-floor-mats": "Fußmatten?",
+    "interior-carpet-conditions": "Flecken, Löcher, Schnitte, Geruch, Feuchtigkeit",
+    "h3-trunk": "Kofferraum",
+    "interior-trunk-spare": "Ersatzreifen (Hält Luft, Nicht verrostet)",
+    "interior-trunk-jack-lug-wrench": "Wagenheber mit Radmutternschlüssel",
+    "interior-trunk-spare-carrier": "Ersatzreifenträger rund (Keine Dellen)",
+    "interior-trunk-lug-nut-key": "Radmutternschlüssel (Sicherheits-Radmuttern)",
+    "interior-trunk-water-marks-damp-carpet": "Wasserspuren, Feuchter Teppich?",
+    "h3-vehicle-otions": "Fahrzeugoptionen",
+    "interior-vehicle-power-windows": "Elektrische Fenster (Hoch-Runter, Kratzer)",
+    "interior-vehicle-window-tint": "Fensterfolie (Blasen, Legal)",
+    "interior-vehicle-power-mirrors": "Elektrische Spiegel (Heizung und Verstellung)",
+    "interior-vehicle-power-locks": "Elektrische Türverriegelung (Alle Türen verriegeln/entriegeln)",
+    "interior-vehicle-radio": "Radio (AM/FM/Uhrzeit richtig eingestellt, Lautsprecher Funktioniert)",
+    "interior-vehicle-ac-heat": "Klimaanlage/Heizung (Alle Einstellungen, Alle Lüftungen)",
+    "interior-vehicle-navigation": "Navigation (Stellen Sie sicher, dass sie funktioniert)",
+    "interior-vehicle-sunroof": "Schiebedach (Öffnet/Schließt, Keine Lecks)",
+    "interior-vehicle-rear-view-mirror": "Innenspiegel (Automatische Abdunklung)",
+    "interior-vehicle-parking-sensors": "Einparkhilfe (Piept im Rückwärtsgang)",
+    "interior-vehicle-lights": "Lichter (Handschuhfach, Karte, Armaturenbrett, etc.)",
+    "interior-vehicle-emergency-brake": "Handbremse hält das Auto im Leerlauf",
+    "interior-vehicle-heated-seats": "Beheizbare Sitze"
   },
   "basic": {
     "year": "Jahr",
