--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -58,7 +58,38 @@
     "oil-cap-pulses-smoke-froth-warm": "Check Under Oil Cap (Strong Pulses/Smoke/Froth)?",
     "idle-smooth-out-warm": "Idle (does the idle drop and smoothout)?",
     "radiator-reservoir-bubbling": "Bubbling in Radiator Reservoir? (Blown Head Gasket)",
-    "exhaust-smoke-warm": "Check Exhaust for Smoke Upon Startup?"
+    "exhaust-smoke-warm": "Check Exhaust for Smoke Upon Startup?",
+    "h2-interior": "Interior",
+    "h3-searts": "Seats",
+    "interior-seats": "Seats: Front and Rear",
+    "interior-damage-stains": "Damage, Rips, Tears, Stains, Smell",
+    "interior-solid-no-movement": "Solid/No Movement",
+    "interior-adjust-properly": "Adjust Properly (Forward, Back, Tilt)",
+    "h3-carpet": "Carpet",
+    "interior-carpet": "Carpet: Front, Rear, and Trunk",
+    "interior-check-under-carpets": "Check Under Carpets (Rust, Water)",
+    "nterior-floor-mats": "Floor Mats?",
+    "interior-carpet-conditions": "Stains, Holes, Cuts, Smell, Dampness",
+    "h3-trunk": "Trunk",
+    "interior-trunk-spare": "Spare (Holds Air, Not Rusty)",
+    "interior-trunk-jack-lug-wrench": "Jack with Lug Wrench",
+    "interior-trunk-spare-carrier": "Spare Tire Carrier Round (No Indents)",
+    "interior-trunk-lug-nut-key": "Lug Nut Key (Locking Lug-Nuts)",
+    "interior-trunk-water-marks-damp-carpet": "Water Marks, Damp Carpet?",
+    "h3-vehicle-otions": "Vehicle Options",
+    "interior-vehicle-power-windows": "Power Windows (Roll Up/Down, Scratches)",
+    "interior-vehicle-window-tint": "Window Tint (Bubbles, Legal)",
+    "interior-vehicle-power-mirrors": "Power Mirrors (Heat and Movement)",
+    "interior-vehicle-power-locks": "Power Locks (All Doors Lock/Unlock)",
+    "interior-vehicle-radio": "Radio (AM/FM/Clock Set Right, Speakers Work)",
+    "interior-vehicle-ac-heat": "AC/Heat (All Settings, All Vents)",
+    "interior-vehicle-navigation": "Navigation (Make Sure It Locates)",
+    "interior-vehicle-sunroof": "Sunroof (Opens/Closes, No Leaks)",
+    "interior-vehicle-rear-view-mirror": "Rear View Mirror (Auto-Dim)",
+    "interior-vehicle-parking-sensors": "Parking Sensors (Beep in Reverse)",
+    "interior-vehicle-lights": "Lights (Glove Box, Map, Dashboard, etc)",
+    "interior-vehicle-emergency-brake": "Emergency Brake Holds Car in Neutral",
+    "interior-vehicle-heated-seats": "Heated Seats"
   },
   "basic": {
     "year": "Year",
