add translation test drive

--- a/locales/de/translation.json
+++ b/locales/de/translation.json
@@ -89,7 +89,34 @@
     "interior-vehicle-parking-sensors": "Einparkhilfe (Piept im Rückwärtsgang)",
     "interior-vehicle-lights": "Lichter (Handschuhfach, Karte, Armaturenbrett, etc.)",
     "interior-vehicle-emergency-brake": "Handbremse hält das Auto im Leerlauf",
-    "interior-vehicle-heated-seats": "Beheizbare Sitze"
+    "interior-vehicle-heated-seats": "Beheizbare Sitze",
+    "h3-headliner": "Dachhimmel",
+    "interior-headliner-sagging": "Hängt er?",
+    "interior-headliner-damage": "Wasserschäden, Brandflecken, Beschädigungen",
+    "h3-wear-tear": "Abnutzung und Verschleiß:",
+    "interior-pedals": "Gas-/Bremspedal",
+    "interior-steering-wheel": "Lenkrad",
+    "interior-shift-knob": "Schaltknauf",
+    "interior-seats-carpet": "Sitze/Teppich",
+    "h2-exterior": "Außenbereich",
+    "h3-lights": "Beleuchtung",
+    "exterior-lights-high-low-beams": "Fern- und Abblendlicht",
+    "exterior-lights-front-running-lights": "Vordere Tagfahrleuchten",
+    "exterior-lights-front-fog-lights": "Vordere Nebelscheinwerfer",
+    "exterior-lights-front-turn-signals": "Vordere Blinker",
+    "exterior-lights-brake-running-lights": "Brems- und Rücklichter",
+    "exterior-lights-pressed-brake-lights": "Bremslichter (3. Bremslicht)",
+    "exterior-lights-rear-turn-signals": "Hintere Blinker",
+    "exterior-lights-rear-fog-lights": "Hintere Nebelscheinwerfer",
+    "h3-body-work": "Karosseriearbeiten",
+    "exterior-bodywork-panel-gaps": "Spaltmaße",
+    "exterior-bodywork-paint-seams": "Lacknähte an den Kanten der Karosserieteile",
+    "exterior-bodywork-bondo": "Bondo (Magnet- und Klopfverfahren)",
+    "h3-tires": "Reifen",
+    "exterior-tires-turn-lock-to-lock": "Lenkeinschlag von Anschlag zu Anschlag",
+    "exterior-tires-inspect-tread-wear": "Prüfen des Reifenprofils",
+    "exterior-tires-inspect-camber-toe-angle": "Prüfen von Sturz und Spur",
+    "test-drive": "Testfahrt"
   },
   "basic": {
     "year": "Jahr",
