--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -89,7 +89,34 @@
     "interior-vehicle-parking-sensors": "Parking Sensors (Beep in Reverse)",
     "interior-vehicle-lights": "Lights (Glove Box, Map, Dashboard, etc)",
     "interior-vehicle-emergency-brake": "Emergency Brake Holds Car in Neutral",
-    "interior-vehicle-heated-seats": "Heated Seats"
+    "interior-vehicle-heated-seats": "Heated Seats",
+    "h3-headliner": "Headliner",
+    "interior-headliner-sagging": "Sagging?",
+    "interior-headliner-damage": "Water Damage, Burns, Damage",
+    "h3-wear-tear": "Wear and Tear:",
+    "interior-pedals": "Gas/Brake Pedal",
+    "interior-steering-wheel": "Steering Wheel",
+    "interior-shift-knob": "Shift Knob",
+    "interior-seats-carpet": "Seats/Carpet",
+    "h2-exterior": "Exterior",
+    "h3-lights": "Lights",
+    "exterior-lights-high-low-beams": "High/Low Beams",
+    "exterior-lights-front-running-lights": "Front Running Lights",
+    "exterior-lights-front-fog-lights": "Front Fog Lights",
+    "exterior-lights-front-turn-signals": "Front Turn Signals",
+    "exterior-lights-brake-running-lights": "Brake Running Lights",
+    "exterior-lights-pressed-brake-lights": "Pressed Brake Lights (3rdBrake Light)",
+    "exterior-lights-rear-turn-signals": "Rear Turn Signals",
+    "exterior-lights-rear-fog-lights": "Rear Fog Lights",
+    "h3-body-work": "Bodywork",
+    "exterior-bodywork-panel-gaps": "Panel Gaps",
+    "exterior-bodywork-paint-seams": "Paint Seams on Edge of Panels",
+    "exterior-bodywork-bondo": "Bondo (Magnet and Tapping Methods)",
+    "h3-tires": "Tires",
+    "exterior-tires-turn-lock-to-lock": "Turn Lock to Lock",
+    "exterior-tires-inspect-tread-wear": "Inspect Tread-Wear",
+    "exterior-tires-inspect-camber-toe-angle": "Inspect Camber/Toe Angle",
+    "test-drive": "Test Drive"
   },
   "basic": {
     "year": "Year",
